--- a/requirements.txt
+++ b/requirements.txt
@@ -92,6 +92,7 @@ numpy==1.25.0
 nvidia-ml-py3==7.352.0
 oauthlib==3.2.2
 onboard==1.2.0
+onnx==1.14.0
 opencv-contrib-python==4.7.0.72
 opencv-python==4.7.0.72
 openslide-python==1.2.0
